--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ h1 {
 .wrapper {
     width: 70%;
     margin: auto;
+    margin-top: 100px;
     padding-top: 25px;
     padding-left: 50px;
     padding-right: 50px;
