--- a/style.css
+++ b/style.css
@@ -3,11 +3,16 @@ html, body {
     height: 100%;
     background-color: #fafafa;
     margin: 0;
-}
-
-h1 {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+form {
+    text-align: center;
+}
+
+/*
+ * index.html
+ */
 
 .wrapper {
     width: 70%;
@@ -18,17 +23,36 @@ h1 {
     padding-right: 50px;
     background-color: #ffffff;
 }
-
+ 
 .search-bar {
     width: 100%;
-    height: 50px;
     background-color: #ffffff;
-    padding-top: 10px;
+    padding-top: 20px;
+    padding-bottom: 0px;
+    display: inline-block;
 }
 
 .search-bar>h1 {
     display: inline;
     margin-left: 10%;
+    font-size: 24px;
+}
+
+.login {
+    display: inline;
+    margin-left: 85%;
+    font-size: 18px;
+    font-weight: 700;
+    text-decoration: none;
+    color: #000000;
+}
+
+.login:hover {
+    color: #006fe8;
+}
+
+.login:visited {
+    color: #000000;
 }
 
 .search {
@@ -36,17 +60,17 @@ h1 {
     height: 30px;
     display: block;
     margin: 0 auto;
-    margin-top: -35px;
+    margin-top: -30px;
     transition: all .1s ease;
     border-radius: 0.125rem;
-    border: 1px solid rgba(204,204,204,.25);
+    border: 1px solid rgba(204, 204, 204, .25);
     background: transparent;
 }
 
 .search:hover {
-    box-shadow: 0px 1px 10px 2px rgba(204,204,204,.25);
+    box-shadow: 0px 1px 10px 2px rgba(204, 204, 204, .25);
     transition: all .1s ease;
-    border: 1px solid rgba(204,204,204, 0);
+    border: 1px solid rgba(204, 204, 204, 0);
 }
 
 .search:focus {
@@ -62,7 +86,7 @@ h1 {
     background-color: white;
     width: 50%;
     position: relative;
-    box-shadow: 0px 1px 10px 2px rgba(204,204,204,.25);
+    box-shadow: 0px 1px 10px 2px rgba(204, 204, 204, .25);
 }
 
 .ui-menu .ui-menu-item {
@@ -81,7 +105,6 @@ ul.ui-autocomplete {
     padding: 0;
     font-size: 12px;
     font-weight: 700;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .ui-helper-hidden-accessible { 
@@ -143,7 +166,11 @@ ul.ui-autocomplete {
     border-bottom: 2px solid black;
 }
 
-.selected{
+.time-period-button:focus {
+    outline: none;
+}
+
+.selected {
     outline: none;
     border-bottom: 2px solid black;
     font-weight: 700;
@@ -155,4 +182,62 @@ ul.ui-autocomplete {
 
 .negative {
     color: #f72121;
+}
+
+/*
+ * login.html
+ */
+
+.wrapper-form {
+    width: 500px;
+    height: 320px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    text-align: center;
+    background-color: #ffffff;
+    -moz-border-radius: 5px; 
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    box-shadow: 0px 1px 10px 2px rgba(204, 204, 204, .25);
+}
+
+.form-input {
+    width: 390px;
+    height: 40px;
+    font-size: 18px;
+    padding-left: 10px;
+    border: 1px solid #dfdfdf;
+}
+
+.form-input:focus {
+    border-color: #006fe8;
+}
+
+.form-password {
+    -webkit-text-security: disc;
+}
+
+.form-submit {
+    width: 400px;
+    height: 40px;
+    margin-top: 40px;
+    font-size: 18px;
+    color: #006fe8;
+    border: 1px solid #006fe8;
+    background: none;
+}
+
+.form-textbutton {
+    margin-top: 25px;
+    font-size: 14px;
+    color: #006fe8;
+    border: none;
+}
+
+.form-textbutton:focus {
+    outline: none;
 }
