--- a/style.css
+++ b/style.css
@@ -205,6 +205,19 @@ ul.ui-autocomplete {
     box-shadow: 0px 1px 10px 2px rgba(204, 204, 204, .25);
 }
 
+.wrapper-form>a {
+    display: block;
+    font-size: 32px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-decoration: none;
+    color: black;
+}
+
+.wrapper-form>a:focus {
+    outline: none;
+}
+
 .form-input {
     width: 390px;
     height: 40px;
@@ -229,6 +242,10 @@ ul.ui-autocomplete {
     color: #006fe8;
     border: 1px solid #006fe8;
     background: none;
+}
+
+.form-submit:focus {
+    outline-color: #bfbfbf;
 }
 
 .form-textbutton {
