--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ html, body {
     background-color: #fafafa;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
 }
 
 form {
@@ -190,12 +192,11 @@ ul.ui-autocomplete {
 
 .wrapper-form {
     width: 500px;
-    height: 320px;
     position: absolute;
-    top: 0;
+    display: inline-block;
+    top: 25%;
     left: 0;
     right: 0;
-    bottom: 0;
     margin: auto;
     text-align: center;
     background-color: #ffffff;
@@ -203,6 +204,7 @@ ul.ui-autocomplete {
     -webkit-border-radius: 5px;
     border-radius: 5px;
     box-shadow: 0px 1px 10px 2px rgba(204, 204, 204, .25);
+    overflow: hidden;
 }
 
 .wrapper-form>a {
@@ -212,9 +214,6 @@ ul.ui-autocomplete {
     margin-bottom: 20px;
     text-decoration: none;
     color: black;
-}
-
-.wrapper-form>a:focus {
     outline: none;
 }
 
@@ -224,6 +223,7 @@ ul.ui-autocomplete {
     font-size: 18px;
     padding-left: 10px;
     border: 1px solid #dfdfdf;
+    border-radius: .125rem;
 }
 
 .form-input:focus {
@@ -242,6 +242,7 @@ ul.ui-autocomplete {
     color: #006fe8;
     border: 1px solid #006fe8;
     background: none;
+    border-radius: .125rem;
 }
 
 .form-submit:focus {
@@ -250,11 +251,25 @@ ul.ui-autocomplete {
 
 .form-textbutton {
     margin-top: 25px;
+    margin-bottom: 25px;
     font-size: 14px;
     color: #006fe8;
     border: none;
+    outline: none;
 }
 
-.form-textbutton:focus {
-    outline: none;
+.form-textbutton:hover {
+    text-decoration: underline;
+}
+
+.form-error {
+    width: 400px;
+    height: 40px;
+    background-color: #ffdc00;
+    border-radius: .125rem;
+    border: 1px solid #dfdfdf;
+    margin: auto;
+    margin-bottom: 20px;
+    font-size: 14px;
+    line-height: 40px;
 }
