--- a/style.css
+++ b/style.css
@@ -1,204 +1,48 @@
+/*
+ * STUFF
+ * pink: #b921c9
+ * purp/blue: #7489dc
+ * lblue: #73d8dc
+ */
+
+/*
+ * TODO:
+ * add gradient to submit button border
+ */
+
+/*
+ * global
+ */
+
 html, body {
     width: 100%;
     height: 100%;
     background-color: #fafafa;
+    padding: 0;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
 }
 
+ul {
+    list-style-type: none;
+}
+
+li>a {
+    text-decoration: none;
+}
+
 form {
     text-align: center;
 }
 
-/*
- * index.html
- */
-
 .wrapper {
-    width: 70%;
+    left: 100px;
+    right: 100px;
     margin: auto;
-    margin-top: 100px;
-    padding-top: 25px;
-    padding-left: 50px;
-    padding-right: 50px;
-    background-color: #ffffff;
-}
- 
-.search-bar {
-    width: 100%;
-    background-color: #ffffff;
-    padding-top: 20px;
-    padding-bottom: 0px;
-    display: inline-block;
-}
-
-.search-bar>h1 {
-    display: inline;
-    margin-left: 10%;
-    font-size: 24px;
-}
-
-.login {
-    display: inline;
-    margin-left: 85%;
-    font-size: 18px;
-    font-weight: 700;
-    text-decoration: none;
-    color: #000000;
-}
-
-.login:hover {
-    color: #006fe8;
-}
-
-.login:visited {
-    color: #000000;
-}
-
-.search {
-    width: 50%;
-    height: 30px;
-    display: block;
-    margin: 0 auto;
-    margin-top: -30px;
-    transition: all .1s ease;
-    border-radius: 0.125rem;
-    border: 1px solid rgba(204, 204, 204, .25);
-    background: transparent;
-}
-
-.search:hover {
-    box-shadow: 0px 1px 10px 2px rgba(204, 204, 204, .25);
-    transition: all .1s ease;
-    border: 1px solid rgba(204, 204, 204, 0);
-}
-
-.search:focus {
-    outline: none;
-}
-
-.ui-autocomplete {
-    max-height: 200px;
-    overflow-y: auto;
-}
-
-.ui-menu {
-    background-color: white;
-    width: 50%;
     position: relative;
-    box-shadow: 0px 1px 10px 2px rgba(204, 204, 204, .25);
-}
-
-.ui-menu .ui-menu-item {
-    height: 40px;
-    line-height: 40px;
-    padding-left: 10px;
-}
-
-.ui-menu .ui-menu-item:hover {
-    background-color: #f2f2f2;
-}
-
-ul.ui-autocomplete {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    font-size: 12px;
-    font-weight: 700;
-}
-
-.ui-helper-hidden-accessible { 
     display: none;
-}
-
-.stock-header {
-    margin: 10px;
-}
-
-.stock-name {
-    font-size: 20px;
-    font-weight: 700;
-    display: inline;
-}
-
-.stock-symbol {
-    font-size: 16px;
-    font-weight: 400;
-    display: inline;
-}
-
-.stock-price {
-    font-size: 40px;
-    font-weight: 700;
-    display: inline;
-}
-
-.stock-price-diff {
-    font-size: 16px;
-    font-weight: 400;
-    display: inline;
-}
-
-.stock-chart {
-    height: 400px;
-    margin-bottom: 50px;
-}
-
-.time-period {
-    background-color: #fafafa;
-    -moz-border-radius: 15px; 
-    -webkit-border-radius: 15px;
-    border-radius: 15px;
-}
-
-.time-period-button {
-    background: transparent;
-    border: none;
-    padding-left: 4px;
-    padding-right: 4px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    font-size: 16px;
-    font-weight: 400;
-}
-
-.time-period-button:hover {
-    border-bottom: 2px solid black;
-}
-
-.time-period-button:focus {
-    outline: none;
-}
-
-.selected {
-    outline: none;
-    border-bottom: 2px solid black;
-    font-weight: 700;
-}
-
-.positive {
-    color: #19be87;
-}
-
-.negative {
-    color: #f72121;
-}
-
-/*
- * login.html
- */
-
-.wrapper-form {
-    width: 500px;
-    position: absolute;
-    display: inline-block;
-    top: 25%;
-    left: 0;
-    right: 0;
-    margin: auto;
-    text-align: center;
     background-color: #ffffff;
     -moz-border-radius: 5px; 
     -webkit-border-radius: 5px;
@@ -207,14 +51,62 @@ ul.ui-autocomplete {
     overflow: hidden;
 }
 
-.wrapper-form>a {
-    display: block;
-    font-size: 32px;
+/*
+ * home
+ */
+
+.sidebar {
+    width: 200px;
+    height: 100%;
+    position: fixed;
+    background-color: #ffffff;
+    box-shadow: 0px 1px 10px 2px rgba(204, 204, 204, .25);
+}
+
+.sidebar>ul>li {
+    margin-bottom: 20px;
+}
+
+.sidebar>ul>li>a {
+    font-size: 18px;
+    color: #7784da;
+}
+
+.wrapper-logo {
+    height: 100px;
+    position: relative;
+}
+
+.wrapper-logo>a>img {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.gradient-border {
+    width: 200px;
+    height: 2px;
+    background: linear-gradient(to right, #b921c9, #7489dc, #73d8dc);
+    margin-bottom: 30px;
+}
+
+/*
+ * login
+ */
+
+.wrapper-login {
+    width: 500px;
+    top: 25%;
+    text-align: center;
+    background-color: #ffffff;
+}
+
+.wrapper-login>img {
     margin-top: 20px;
     margin-bottom: 20px;
-    text-decoration: none;
-    color: black;
-    outline: none;
 }
 
 .form-input {
@@ -273,3 +165,26 @@ ul.ui-autocomplete {
     font-size: 14px;
     line-height: 40px;
 }
+
+/*
+ * stocks
+ */
+
+ .wrapper-stocks {
+     width: 60%;
+     height: 1000px;
+     margin-top: 100px;
+ }
+
+ .wrapper-search {
+     width: 60%;
+     height: 100px;
+     top: 10%;
+ }
+
+ .wrapper-search>input[type="text"] {
+    width: 60%;
+    height: 40px;
+    display: block;
+    margin: auto;
+ }
